# f3m

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  deny.toml  eslint.config.js  index.html  package-lock.json  package.json  qodana.yaml  strata.html  style.css  todo.txt
.claude/: review-rust.md
.github/workflows/: ci.yml  pages.yml
crates/html_helpers/: Cargo.toml
crates/html_helpers/src/: classify.rs  combined_table.rs  diagonals.rs  lib.rs  shortprops.rs  spans.rs  strata.rs  testcase.rs  tilt.rs
crates/semigroup_cones/: Cargo.toml
crates/semigroup_cones/src/: lib.rs  main.rs
crates/semigroup_explorer/: Cargo.toml
crates/semigroup_explorer/src/: js_eval.rs  jsgraph.rs  lib.rs  pagestate.rs
crates/semigroup_math/: Cargo.toml
crates/semigroup_math/src/: lib.rs  strata.rs
crates/semigroup_math/src/eva/: mod.rs
crates/semigroup_math/src/math/: creators.rs  glue.rs  manipulators.rs  matrix.rs  mod.rs  random_creators.rs  semigroup.rs  semigroup_compute.rs  symmetric_partner.rs
crates/semigroup_math/src/math/matrix/: dense.rs  mod.rs  scalar.rs  semigroup_matrices.rs  traits.rs
crates/semigroup_math/src/math/semigroup/: bool_props.rs  mod.rs  numerical.rs  vec_props.rs
crates/semigroup_math/tests/: integration.rs  math_tests.rs  semigroup_tests.rs
crates/semigroup_math/tests/data/: check_fixtures.csv
gap/: example.g  example2.g  gaptest_with_Um.g  my_semigroup.tex  newtests.g  test.g  tkiz_idea.g
history/: semigroup_g_from2to10_summary.html  semigroup_g_from2to11_list.html  semigroup_g_from2to13_list.html  semigroup_g_from2to13_summary.html  semigroup_g_from2to14_summary.html  semigroup_g_from2to2_list.html  semigroup_g_from2to2_summary.html
history/inequality_only/: generate_report.py  index.html  normaliz_13.in  normaliz_13.out  normaliz_14.out  normaliz_3.out  normaliz_4.in  normaliz_4.out  normaliz_7.in  normaliz_7.out  normaliz_9.out  normaliz_g2_m2_t1.in  normaliz_g2_m2_t2.out  normaliz_g2_m3_t2.in
jsmodules/: app.js  graph.js  strata.js  view3d.js
normaliz/: generate_report_g.py  index5.html  index6.html  index7.html  index8.html  normaliz_10.in  normaliz_12.in  normaliz_12.out  normaliz_2.in  normaliz_2.out  normaliz_8.out  normaliz_g10_m10_t1.in  normaliz_g10_m10_t1.out  normaliz_g10_m10_t10.in  normaliz_g10_m10_t2.in  normaliz_g10_m10_t2.out  normaliz_g10_m10_t3.in  normaliz_g10_m10_t4.in  normaliz_g10_m10_t5.in  normaliz_g10_m10_t6.in  normaliz_g10_m10_t6.out  normaliz_g10_m10_t7.in  normaliz_g10_m10_t8.in  normaliz_g10_m10_t9.in  normaliz_g10_m11_t1.in  normaliz_g10_m11_t10.in  normaliz_g10_m11_t2.in  normaliz_g10_m11_t3.in  normaliz_g10_m11_t4.in  normaliz_g10_m11_t5.in  normaliz_g10_m11_t6.in  normaliz_g10_m11_t7.in  normaliz_g10_m11_t8.in  normaliz_g10_m11_t9.in  normaliz_g10_m2_t1.in  normaliz_g10_m2_t10.in  normaliz_g10_m2_t10.out  normaliz_g10_m2_t2.in  normaliz_g10_m2_t3.in  normaliz_g10_m2_t4.in  (+1061 more)
normaliz/inequality_only/: normaliz_10.out  normaliz_11.in  normaliz_11.out  normaliz_14.in  normaliz_3.in  normaliz_5.in  normaliz_5.out  normaliz_6.in  normaliz_6.out  normaliz_8.in  normaliz_9.in  normaliz_g2_m2_t2.in  normaliz_g2_m3_t1.in  normaliz_g2_m3_t1.out
normaliz/normaliz-3.11.1-Windows/example/: Makefile.in
pkg/: f3m.d.ts  f3m.js  f3m_bg.wasm  f3m_bg.wasm.d.ts  package.json
src/: js_helper.rs  lib.rs  main.rs
src/eva/: mod.rs
src/jshelpers/: combined_table.rs  js_eval.rs  jsgraph.rs  mod.rs  pagestate.rs  shortprops_table.rs  tilt.rs
src/math/: glue.rs  graph.rs  matrix.rs  mod.rs  semigroup.rs  symmetric_partner.rs
tests/: integration.rs
tex/: writeup_updown.tex
