[package]
name = "f3m"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
description = "Numerical-semigroup calculator: properties (Frobenius, Apéry, gaps, Kunz, …) compiled to WebAssembly."
license = "MIT OR Apache-2.0"
repository = "https://github.com/Bleiglanz/f3m"
keywords = ["numerical-semigroup", "frobenius", "apery", "kunz", "wasm"]
categories = ["mathematics", "wasm"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
primal = "0.3"
num-traits = "0.2" # Zero, One traits used by the matrix module

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rayon = "1"        # parallel iterator for the normaliz binary

[dev-dependencies]
proptest = "1"     # property-based tests for matrix algebra laws
