[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Bleiglanz/f3m"
keywords = ["numerical-semigroup", "frobenius", "apery", "kunz", "wasm"]
categories = ["mathematics", "wasm"]
readme = "README.md"

[workspace.dependencies]
num-traits = "0.2"
primal = "0.3"
rand = { version = "0.8", default-features = false, features = ["std", "std_rng"] }
getrandom = "0.2"
rayon = "1"
wasm-bindgen = "0.2"
proptest = "1"
semigroup_math = { path = "crates/semigroup_math" }
html_helpers = { path = "crates/html_helpers" }
