[package]
name = "semigroup_cones"
description = "CLI: enumerate numerical semigroups via the Waldi Polytope using the bundled Normaliz binary. Produces aggregate HTML reports."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[lib]
name = "semigroup_cones"
path = "src/lib.rs"

[[bin]]
name = "waldicone"
path = "src/main.rs"

[[bin]]
name = "waldicone_k"
path = "src/bin/waldicone_k.rs"

[[bin]]
name = "waldicone_kappa"
path = "src/bin/waldicone_kappa.rs"

[dependencies]
semigroup_math.workspace = true
rayon.workspace = true
