[package]
name = "semigroup_math"
description = "Pure-Rust numerical-semigroup algorithms: Frobenius, Apéry, Kunz, gluing, matrix algebra, GAP source generation."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[dependencies]
num-traits.workspace = true
primal.workspace = true
rand.workspace = true

# `getrandom` underlies `rand::thread_rng()` on wasm32-unknown-unknown; the
# `js` feature wires it through `crypto.getRandomValues` in the browser.
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { workspace = true, features = ["js"] }

[dev-dependencies]
proptest.workspace = true
